crates/ndc-sqlserver/tests/snapshots/mutation_tests__native_mutations__native_mutation_insert_artist_and_return_artist.snap
---
source: crates/ndc-sqlserver/tests/mutation_tests.rs
expression: result
---
{
  "operation_results": [
    {
      "type": "procedure",
      "result": {
        "returning": [
          {
            "name": "Ramesh",
            "Artist": {
              "rows": [
                {
                  "name": "Ramesh"
                }
              ]
            }
          }
        ],
        "affected_rows_haha": 1
      }
    }
  ]
}
