crates/ndc-sqlserver/tests/snapshots/mutation_tests__native_mutations__native_mutation_insert_artist_and_return_id.snap
---
source: crates/ndc-sqlserver/tests/mutation_tests.rs
expression: result
---
{
  "operation_results": [
    {
      "type": "procedure",
      "result": {
        "returning": [
          {
            "name": "Ramesh",
            "id": 276
          }
        ],
        "affected_rows": 1
      }
    },
    {
      "type": "procedure",
      "result": {
        "output": [
          {
            "artist_name": "Suresh",
            "artist_id": 277
          }
        ],
        "rows_affected": 1
      }
    }
  ]
}
