crates/ndc-sqlserver/tests/snapshots/mutation_tests__native_mutations__native_mutation_insert_artist_and_return_id_with_aliases.snap
---
source: crates/ndc-sqlserver/tests/mutation_tests.rs
expression: result
---
{
  "operation_results": [
    {
      "type": "procedure",
      "result": {
        "output": [
          {
            "name": "R",
            "id": 276
          }
        ],
        "rows_affected": 1
      }
    }
  ]
}
